(lang dune 3.16)

(name advent_of_code_2024)

(generate_opam_files false)

(source
 (github HLLRay/advent_of_code_2024))

(authors "Ray")

(maintainers "Ray")

(license LICENSE)


(package
 (name advent_of_code_2024)
 (depends
  (ocaml (>= 5.2))
  core))

; (documentation https://url/to/documentation)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
